--- a/UserSettings/Search.settings
+++ b/UserSettings/Search.settings
@@ -10,6 +10,12 @@ scopes = {
 	"last_search.EAB0C2BA" = "Fungus"
 	"OpenInspectorPreview.EAB0C2BA" = "0"
 	"currentGroup.EAB0C2BA" = "all"
+	"last_search.DD5CDD96" = ""
+	"OpenInspectorPreview.DD5CDD96" = "0"
+	"currentGroup.DD5CDD96" = "scene"
+	"last_search.F8949528" = " noti"
+	"OpenInspectorPreview.F8949528" = "0"
+	"currentGroup.F8949528" = "all"
 }
 providers = {
 	find = {
